Bug 509364 - Tellico crashes for truncated (< 5 bytes) input file
Summary: Tellico crashes for truncated (< 5 bytes) input file
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.1.3
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-11 02:05 UTC by Robby Stephenson
Modified: 2025-09-11 02:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.1.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2025-09-11 02:05:39 UTC
The input file contents are '<?' with no EOL
Comment 1 Robby Stephenson 2025-09-11 02:07:51 UTC
Git commit 8c18837abd273f8fdeb0ca87b43b790d04f9a33c by Robby Stephenson.
Committed on 11/09/2025 at 02:07.
Pushed by rstephenson into branch '4.1'.

Fix crashing bug for truncated input file

Check buffer length before reading
FIXED-IN: 4.1.4

M  +4    -0    ChangeLog
A  +1    -0    src/tests/data/truncated.xml
M  +7    -0    src/tests/tellicoreadtest.cpp
M  +1    -0    src/tests/tellicoreadtest.h
M  +1    -1    src/translators/tellicoimporter.cpp

https://invent.kde.org/office/tellico/-/commit/8c18837abd273f8fdeb0ca87b43b790d04f9a33c
Comment 2 Robby Stephenson 2025-09-11 02:13:07 UTC
Git commit d766cc7a5c9f400a8fe321bf2710e37094b0cabf by Robby Stephenson.
Committed on 11/09/2025 at 02:12.
Pushed by rstephenson into branch 'master'.

Fix crashing bug for truncated input file

Check buffer length before reading

M  +4    -0    ChangeLog
A  +1    -0    src/tests/data/truncated.xml
M  +7    -0    src/tests/tellicoreadtest.cpp
M  +1    -0    src/tests/tellicoreadtest.h
M  +10   -12   src/translators/tellicoimporter.cpp

https://invent.kde.org/office/tellico/-/commit/d766cc7a5c9f400a8fe321bf2710e37094b0cabf