Fix crashing bug for truncated input file

Check buffer length before reading

BUG: 509364
FIXED-IN: 4.1.4